Add role and om-role application service and tests

--- a/src/CharonX.Application/CharonX.Application.csproj
+++ b/src/CharonX.Application/CharonX.Application.csproj
@@ -13,4 +13,7 @@
   <ItemGroup>
     <ProjectReference Include="..\CharonX.Core\CharonX.Core.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Organizations\Dto\" />
+  </ItemGroup>
 </Project>
