--- a/src/CharonX.Web.Host/appsettings.json
+++ b/src/CharonX.Web.Host/appsettings.json
@@ -11,8 +11,8 @@
   "Authentication": {
     "JwtBearer": {
       "IsEnabled": "true",
-      "SecurityKey": "CharonX_C421AAEE0D114E9C",
-      "Issuer": "CharonX",
+      "SecurityKey": "0iNnv0YeAyroGHmQ1TnZMPn3FT9SwnHw",
+      "Issuer": "nqvoku9iGpYaa0brtdReJrUeAtyUcHO3",
       "Audience": "CharonX"
     }
   }
