--- a/src/CharonX.Application/CharonX.Application.csproj
+++ b/src/CharonX.Application/CharonX.Application.csproj
@@ -14,4 +14,10 @@
     <ProjectReference Include="..\CharonX.Core\CharonX.Core.csproj" />
     <ProjectReference Include="..\CharonX.EntityFrameworkCore\CharonX.EntityFrameworkCore.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Authorization\Gateway\Dto\" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="RestSharp" Version="106.10.1" />
+  </ItemGroup>
 </Project>
