--- a/src/CharonX.Core/CharonX.Core.csproj
+++ b/src/CharonX.Core/CharonX.Core.csproj
@@ -18,5 +18,9 @@
     <PackageReference Include="Abp.AutoMapper" Version="5.6.0" />
     <PackageReference Include="Abp.ZeroCore.EntityFrameworkCore" Version="5.6.0" />
     <PackageReference Include="Castle.Windsor.MsDependencyInjection" Version="3.3.1" />
+    <PackageReference Include="RestSharp" Version="106.10.1" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Authorization\AuthCode\" />
   </ItemGroup>
 </Project>
