--- a/src/CharonX.Web.Host/appsettings.json
+++ b/src/CharonX.Web.Host/appsettings.json
@@ -15,5 +15,13 @@
       "Issuer": "nqvoku9iGpYaa0brtdReJrUeAtyUcHO3",
       "Audience": "CharonX"
     }
+  },
+  "Gateway": {
+    "Address": "http://10.10.1.117:8001/"
+  },
+  "SmsAuthCode": {
+    "SmsServerAddress": "http://10.10.1.101:9080/",
+    "ExpireMinutes": 5,
+    "MaxRetryTimes": 3
   }
 }
