--- a/src/CharonX.Web.Host/appsettings.json
+++ b/src/CharonX.Web.Host/appsettings.json
@@ -22,6 +22,7 @@
   "SmsAuthCode": {
     "SmsServerAddress": "http://10.10.1.101:9080/",
     "ExpireMinutes": 5,
-    "MaxRetryTimes": 3
+    "MaxRetryTimes": 3,
+    "DebugMode": true    
   }
 }
