--- a/src/CharonX.Application/CharonX.Application.csproj
+++ b/src/CharonX.Application/CharonX.Application.csproj
@@ -11,12 +11,12 @@
     <RootNamespace>CharonX</RootNamespace>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <OutputPath>F:\DataProduct\CharonX\src\CharonX.Web.Host\bin\Debug\netcoreapp3.1\</OutputPath>
-    <DocumentationFile>F:\DataProduct\CharonX\src\CharonX.Web.Host\bin\Debug\netcoreapp3.1\CharonX.Application.xml</DocumentationFile>
+    <OutputPath>bin\Debug\netcoreapp3.1\</OutputPath>
+    <DocumentationFile>bin\Debug\netcoreapp3.1\CharonX.Application.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <OutputPath>F:\DataProduct\CharonX\src\CharonX.Web.Host\bin\Release\netcoreapp3.1\</OutputPath>
-    <DocumentationFile>F:\DataProduct\CharonX\src\CharonX.Web.Host\bin\Release\netcoreapp3.1\CharonX.Application.xml</DocumentationFile>
+    <OutputPath>bin\Release\netcoreapp3.1\</OutputPath>
+    <DocumentationFile>bin\Release\netcoreapp3.1\CharonX.Application.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\CharonX.Core\CharonX.Core.csproj" />
