--- a/src/CharonX.Web.Host/Properties/launchSettings.json
+++ b/src/CharonX.Web.Host/Properties/launchSettings.json
@@ -29,6 +29,10 @@
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
       "publishAllPorts": true
+    },
+    "Azure Dev Spaces": {
+      "commandName": "AzureDevSpaces",
+      "launchBrowser": true
     }
   }
 }
