--- a/src/CharonX.Web.Host/appsettings.json
+++ b/src/CharonX.Web.Host/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "server=localhost;uid=root;pwd=magxj500t;database=CharonXDb"
-    //"Default": "server=10.10.1.51;Port=4000;uid=root;pwd=;database=CharonXDb;ConnectionReset=false"
+    //"Default": "server=localhost;uid=root;pwd=magxj500t;database=CharonXDb"
+    "Default": "server=10.10.1.51;Port=4000;uid=root;pwd=;database=CharonXDb;ConnectionReset=false"
   },
   "App": {
     "ServerRootAddress": "http://localhost:21021/",
