Use Redis Cache

--- a/src/CharonX.Web.Host/appsettings.json
+++ b/src/CharonX.Web.Host/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    //"Default": "server=localhost;uid=root;pwd=magxj500t;database=CharonXDb"
+    //"Default": "server=localhost;uid=root;pwd=root;database=CharonXDb"
     "Default": "server=10.10.1.51;Port=4000;uid=root;pwd=;database=CharonXDb;ConnectionReset=false"
   },
   "App": {
@@ -20,9 +20,14 @@
     "Address": "http://10.10.1.117:8001/"
   },
   "SmsAuthCode": {
-    "SmsServerAddress": "http://10.10.1.101:9080/",
-    "ExpireMinutes": 5,
+    "SmsServerAddress": "http://kubernetes-dev.pensees-ai.com:32080/middleware-sms",
+    "ExpireMinutes": 1,
     "MaxRetryTimes": 3,
-    "DebugMode": true    
+    "DebugMode": false
+  },
+  "RedisCache": {
+    "ConnectionString": "10.10.1.219:26379,password=redis!Pensees_ai.c0m",
+    "DatabaseId": 10
   }
+
 }
