--- a/src/CharonX.Web.Core/CharonX.Web.Core.csproj
+++ b/src/CharonX.Web.Core/CharonX.Web.Core.csproj
@@ -22,6 +22,7 @@
     <ProjectReference Include="..\CharonX.EntityFrameworkCore\CharonX.EntityFrameworkCore.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Abp.RedisCache" Version="5.6.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.3.2" />
     <PackageReference Include="Abp.AspNetCore" Version="5.6.0" />
