Change send sms api

--- a/src/CharonX.Web.Host/appsettings.json
+++ b/src/CharonX.Web.Host/appsettings.json
@@ -23,7 +23,9 @@
     "SmsServerAddress": "http://kubernetes-dev.pensees-ai.com:32080/middleware-sms",
     "ExpireMinutes": 1,
     "MaxRetryTimes": 3,
-    "DebugMode": false
+    "DebugMode": false,
+    "AppName": "澎思云",
+    "OperationName": "登录"  
   },
   "RedisCache": {
     "ConnectionString": "10.10.1.219:26379,password=redis!Pensees_ai.c0m",
