--- a/src/CharonX.Web.Host/appsettings.json
+++ b/src/CharonX.Web.Host/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    //"Default": "server=localhost;uid=root;pwd=root;database=CharonXDb"
-    "Default": "server=10.10.1.51;Port=4000;uid=root;pwd=;database=CharonXDb;ConnectionReset=false"
+    "Default": "server=localhost;uid=root;pwd=magxj500t;database=CharonXDb"
+    //"Default": "server=10.10.1.51;Port=4000;uid=root;pwd=;database=CharonXDb;ConnectionReset=false"
   },
   "App": {
     "ServerRootAddress": "http://localhost:21021/",
@@ -21,7 +21,7 @@
   },
   "SmsAuthCode": {
     "SmsServerAddress": "http://kubernetes-dev.pensees-ai.com:32080/middleware-sms",
-    "ExpireMinutes": 1,
+    "ExpireMinutes": 5,
     "MaxRetryTimes": 3,
     "DebugMode": false,
     "AppName": "澎思云",
