Revert "Add a new login method : AuthenticateByEmail"
This reverts commit 76cb12e9b2a06b3f584afc9560077650a0f7ada7.

--- a/src/CharonX.Web.Host/appsettings.json
+++ b/src/CharonX.Web.Host/appsettings.json
@@ -1,8 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "server=localhost;uid=root;pwd=root;database=CharonXDb",
-    //"Default": "server=10.10.1.36;Port=3307;uid=root;pwd=cimevue@1234;database=CharonXDb;sslMode=None;Pooling=true"
-    //"Default": "server=10.10.1.51;Port=4000;uid=root;pwd=mysql!Pensees_ai.c0m;database=CharonXDb;ConnectionReset=false"
+    //"Default": "server=localhost;uid=root;pwd=magxj500t;database=CharonXDb"
+    "Default": "server=10.10.1.51;Port=4000;uid=root;pwd=mysql!Pensees_ai.c0m;database=CharonXDb;ConnectionReset=false"
   },
   "App": {
     "ServerRootAddress": "http://localhost:21021/",
