Add DistrictId on Tenant and set token expiration configurable

--- a/src/CharonX.Web.Host/appsettings.json
+++ b/src/CharonX.Web.Host/appsettings.json
@@ -13,7 +13,8 @@
       "IsEnabled": "true",
       "SecurityKey": "0iNnv0YeAyroGHmQ1TnZMPn3FT9SwnHw",
       "Issuer": "nqvoku9iGpYaa0brtdReJrUeAtyUcHO3",
-      "Audience": "CharonX"
+      "Audience": "CharonX",
+      "ExpireDays": 1
     }
   },
   "Gateway": {
