Set timezone +8 in docker.

--- a/src/CharonX.Web.Host/Dockerfile
+++ b/src/CharonX.Web.Host/Dockerfile
@@ -6,7 +6,7 @@ EXPOSE 80
 
 #FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
 FROM 10.10.1.221:8086/library/aspdotnet-base:beta AS build
-#此处异常尴尬：公司网络问题导致不能restore,我在家做aspdotnet-base镜像时忘记删除其中的src,该image已传到公司harbor，不想再更换
+#此处略显尴尬：公司网络问题导致不能restore,我在家做aspdotnet-base镜像时忘记删除其中的src,该image已传到公司harbor，不想再更换
 RUN rm -rf /src
 WORKDIR /src
 #COPY ["src/CharonX.Web.Host/nuget.config", "src/CharonX.Web.Host/"]
@@ -35,4 +35,5 @@ FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
 ENV ComPlus_ThreadPool_ForceMinWorkerThreads=200
+ENV TZ=Asia/Shanghai
 ENTRYPOINT ["dotnet", "CharonX.Web.Host.dll"]
